Added link table
Added link table between trail and location_point
Added new endpoint for detailed trail information
Refactored CRUD to use response and json.dump instead of jsonify
